# ani-gui

./: .gitignore  DEBUGGING_NOTES.md  LICENSE  README.md  TODO.md  anicli_gui.py  anigui_redesign.html
.github/workflows/: ci.yml  release.yml
anigui-tauri/: README.md  index.html  package-lock.json  package.json
anigui-tauri/src/: main.ts  state.ts  style.css  types.ts  utils.ts
anigui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
anigui-tauri/src-tauri/capabilities/: default.json
anigui-tauri/src-tauri/src/: lib.rs  main.rs
anigui-tauri/src/components/: settings.ts  sync-bar.ts  toast.ts
anigui-tauri/src/views/: browse.css  browse.ts  detail.css  detail.ts  downloads.css  downloads.ts  sidebar.css  sidebar.ts
