[package]
name = "anigui-tauri"
version = "1.0.1"
description = "AniGUI - Anime CLI Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "anigui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
which = "6"
open = "5"
dirs-next = "2"
